updated : responsive home layout fixed : gulp build task no watching

--- a/src/client/styles/App.sass
+++ b/src/client/styles/App.sass
@@ -25,6 +25,7 @@
 
 //APP PAGES
 @import "pages/NotFound.sass"
+@import "pages/Home.sass"
 
 //REACT COMPONENTS
 @import "components/RegisterForm.sass"
