--- a/src/client/styles/utils/color.scss
+++ b/src/client/styles/utils/color.scss
@@ -50,7 +50,7 @@ $custom-colors : colorMap($baseColors);
 
 /*====================
     Uncomment these lines to get a class for each shade that sets the color to this shade, and another that will do the same for the background color.
-    WARNING : this provides a huge amount of code that you probably won't need/
+    WARNING : this provides a huge amount of classes that you probably won't need/
     ==================*/
 
 // @each $key, $value in $colors{
