--- a/src/client/styles/App.sass
+++ b/src/client/styles/App.sass
@@ -19,8 +19,12 @@
 //SASS ELEMENTS
 
 //APP PAGES
+@import "pages/PlayerPage.sass"
 
 //REACT COMPONENTS
+@import "components/PlayerContainer.sass"
+@import "components/PlayerControl.sass"
+@import "components/PlayerCurrentInfos.sass"
 
 //APP GLOBAL STYLES
 
