--- a/src/client/styles/components/PlayerControl.sass
+++ b/src/client/styles/components/PlayerControl.sass
@@ -1,6 +1,21 @@
 #PlayerControl
     padding: 10px
     .controls
+        display: grid
+        grid-template-columns: repeat(4, 1fr)
+
         height: 50px
         width: 350px
         border: 1px solid #444
+        .controlButton
+            display: flex
+            flex-direction: column
+            justify-content: center
+            align-items: center
+
+            transition: all .3s
+
+            font-size: 1.8em
+
+            &:hover
+                color: rgba(#666, .3)
